--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "surge -p ./web"
+    "deploy": "surge -p ./docs"
   },
   "repository": {
     "type": "git",
